Release of version 1.11.0